[gd_scene load_steps=6 format=3 uid="uid://b3eg3mav5b7aq"]

[ext_resource type="Script" path="res://source/scripts/DialoguePanel.gd" id="1_nrpqv"]

[sub_resource type="LabelSettings" id="LabelSettings_pt75b"]
font_size = 24

[sub_resource type="Animation" id="Animation_hv1bi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dialogue:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_a1x4r"]
resource_name = "load"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dialogue:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ivklp"]
_data = {
"RESET": SubResource("Animation_hv1bi"),
"load": SubResource("Animation_a1x4r")
}

[node name="DialoguePanel" type="Panel"]
offset_right = 384.0
offset_bottom = 128.0
size_flags_horizontal = 3
script = ExtResource("1_nrpqv")
character_name = "Name"
dialogues = Array[String]([])

[node name="Header" type="Panel" parent="."]
layout_mode = 0
offset_right = 384.0
offset_bottom = 32.0

[node name="CharacterName" type="Label" parent="Header"]
layout_mode = 0
offset_left = 8.0
offset_right = 59.0
offset_bottom = 34.0
text = "Name"
label_settings = SubResource("LabelSettings_pt75b")

[node name="Dialogue" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 40.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
text = "Dialogue goes here..."

[node name="Continue" type="Button" parent="."]
layout_mode = 0
offset_left = 304.0
offset_top = 96.0
offset_right = 383.0
offset_bottom = 127.0
text = "Continue"
flat = true

[node name="DialogueAnims" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ivklp")
}

[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
